[gd_scene load_steps=3 format=3 uid="uid://c5gws3xmrpsdb"]

[ext_resource type="Script" uid="uid://b6mmhema7b4os" path="res://scripts/interactables/InspectionPanel.gd" id="1_1r60i"]
[ext_resource type="Texture2D" uid="uid://jlpmjhiwb1ua" path="res://assets/ui/panel.png" id="2_b5bs1"]

[node name="InspectionPanel" type="CanvasLayer"]
script = ExtResource("1_1r60i")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -128.0
offset_right = 175.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="CenterContainer/PanelContainer"]
modulate = Color(1, 1, 1, 0.7529412)
layout_mode = 2
texture = ExtResource("2_b5bs1")
patch_margin_left = 2
patch_margin_top = 32
patch_margin_right = 27
patch_margin_bottom = 2

[node name="Padding" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/Padding"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Icon" type="TextureRect" parent="CenterContainer/PanelContainer/Padding/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="LabelName" type="Label" parent="CenterContainer/PanelContainer/Padding/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item Name"
horizontal_alignment = 1

[node name="LabelDesc" type="Label" parent="CenterContainer/PanelContainer/Padding/VBoxContainer"]
layout_mode = 2
text = "Item description goes here."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/Padding/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonTake" type="Button" parent="CenterContainer/PanelContainer/Padding/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Take"

[node name="ButtonLeave" type="Button" parent="CenterContainer/PanelContainer/Padding/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Leave"
